--- a/scss/global.scss
+++ b/scss/global.scss
@@ -676,11 +676,82 @@
   padding: 110px 0;
   background-color: #fff;
 
+  .catalogs {
+    padding: 60px 0;
+    .catalogs-title {
+      font-size: 26px;
+      font-weight: 600;
+      line-height: 40px;
+      margin-bottom: 80px;
+      text-align: center;
+      &.white{
+        color: #fff;
+      }
+    }
+
+    .catalogs-grid {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      grid-gap: 30px;
+      grid-row-gap: 80px;
+      @media (max-width: 1200px) {
+        grid-template-columns: repeat(3, 1fr);
+      }
+      @media (max-width: 960px) {
+        grid-template-columns: repeat(2, 1fr);
+      }
+      @media (max-width: 640px) {
+        grid-template-columns: 1fr;
+        grid-row-gap: 40px;
+      }
+
+
+    }
+
+    .catalogs-grid-item {
+      background-color: #F7F8FB;
+      border-radius: 10px;
+      padding: 42px 25px;
+    }
+    .catalogs-grid-item-image{
+      margin: -90px 0 10px -25px;
+      &.center{
+        margin: -90px 0 10px 50%;
+        transform: translateX(-50%);
+      }
+    }
+
+    .catalogs-grid-item-title{
+      font-size: 26px;
+      font-weight: 600;
+      line-height: 30px;
+      margin-bottom: 10px;
+      color: #BA2828;
+      text-transform: lowercase;
+      &.green {
+        color: #51A563;
+      }
+    }
+    .catalogs-grid-item-title:first-letter {
+      text-transform: uppercase;
+    }
+    .catalogs-grid-item-desc{
+      font-size: 20px;
+      font-weight: 400;
+      line-height: 28px;
+    }
+  }
+
   .product-block-nav {
     display: flex;
     gap: 4px;
     flex-wrap: wrap;
     margin-bottom: 60px;
+
+    &.center {
+      justify-content: center;
+    }
+
     @media (max-width: 640px) {
       margin-bottom: 30px;
     }
@@ -1480,6 +1551,7 @@
   @media (max-width: 960px) {
     background-image: none;
   }
+
   .history-block-preview-grid {
     display: grid;
     grid-template-columns: 1fr 730px;
@@ -1518,13 +1590,16 @@
     border-radius: 10px;
     width: 100%;
   }
-  .history-block-tab{
+
+  .history-block-tab {
     position: relative;
   }
-  .swiper{
+
+  .swiper {
     padding: 0 90px 100px 90px;
   }
-  .swiper-button-next, .swiper-button-prev{
+
+  .swiper-button-next, .swiper-button-prev {
     top: 58px;
     box-shadow: 0px 4px 54px 0px #0000001F;
     @media (max-width: 1532px) {
@@ -1535,23 +1610,27 @@
     }
 
   }
-  .swiper-slide{
+
+  .swiper-slide {
     display: flex;
     list-style: none;
     align-items: center;
     justify-content: center;
-    &.ui-state-active{
-      .history-block-card{
+
+    &.ui-state-active {
+      .history-block-card {
         background-color: #BA2828;
         color: #ffffff;
-        &:after{
+
+        &:after {
           opacity: 1;
           bottom: -70px;
         }
       }
     }
   }
-  .history-block-card{
+
+  .history-block-card {
     pointer-events: none;
     width: 100%;
     transition: 0.3s;
@@ -1578,7 +1657,7 @@
     }
 
 
-    &:after{
+    &:after {
       width: 50px;
       height: 50px;
       background-image: url(../img/svg/caret-right.svg);
@@ -1593,7 +1672,8 @@
       transition: 0.3s;
     }
   }
-  .history-block-tab-content{
+
+  .history-block-tab-content {
     padding: 0 290px;
     font-size: 26px;
     font-weight: 400;
@@ -1609,14 +1689,17 @@
     }
   }
 }
-.news-detail{
+
+.news-detail {
   padding: 100px 0 200px 0;
   background-color: #fff;
   @media (max-width: 640px) {
     padding: 40px 0 80px 0;
   }
-  .swiper-container{
+
+  .swiper-container {
     position: relative;
+
     img {
       height: auto;
       border-radius: 10px;
@@ -1627,35 +1710,40 @@
       }
     }
   }
-  .swiper{
+
+  .swiper {
     border-radius: 10px;
   }
-  .swiper-button-next, .swiper-button-prev{
+
+  .swiper-button-next, .swiper-button-prev {
     box-shadow: 0px 4px 54px 0px #0000001F;
     top: 50%;
     transform: translateY(-50%);
   }
-  .swiper-button-prev{
+
+  .swiper-button-prev {
     left: -55px;
     @media (max-width: 1650px) {
       left: 10px;
     }
   }
-  .swiper-button-next{
+
+  .swiper-button-next {
     right: -55px;
     @media (max-width: 1650px) {
       right: 10px;
     }
   }
 
-  .date{
+  .date {
     font-size: 16px;
     font-weight: 500;
     color: #808080;
     display: flex;
     align-items: center;
     margin-bottom: 20px;
-    &:before{
+
+    &:before {
       width: 2px;
       height: 20px;
       background-color: #808080;
@@ -1664,67 +1752,593 @@
     }
 
   }
-  .title{
+
+  .title {
     font-size: 44px;
     font-weight: 600;
     line-height: 53.9px;
     margin-bottom: 40px;
     color: #000000;
   }
-  .desc{
+
+  .desc {
     font-size: 26px;
     font-weight: 400;
     line-height: 38px;
     margin-top: 40px;
     max-width: 1126px;
-    *{
+
+    * {
       margin-bottom: 20px;
     }
   }
-  .line{
+
+  .line {
     border-top: 1px solid #D3D9E6;
     margin: 60px 0 30px 0;
   }
-  .social{
+
+  .social {
     display: flex;
     align-items: center;
     gap: 16px;
   }
 }
-.video-youtube{
+
+.video-youtube {
   padding-top: 100px;
-  iframe{
+
+  iframe {
     display: block;
     margin: 0 auto;
     border-radius: 10px;
+    max-width: 100%;
+    @media (max-width: 1200px) {
+      height: 500px;
+    }
+    @media (max-width: 640px) {
+      height: 300px;
+    }
+
   }
 }
-.products-info{
+
+.products-info {
   margin-bottom: 200px;
-  .products-info-row{
+
+  .line {
+    margin-bottom: 70px;
+    border-top: 1px solid #C6CAD2;
+  }
+
+  .products-info-row {
     margin-bottom: 100px;
   }
-  .products-info-grid{
+
+  .products-info-grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 30px;
+    align-items: center;
+    margin-bottom: 20px;
+    @media (max-width: 960px) {
+      grid-template-columns: 1fr
+    }
   }
-  .products-info-grid-left{
-    img{
+
+  .products-info-grid-left {
+    @media (max-width: 640px) {
+      display: flex;
+      gap: 20px;
+      align-items: center;
+    }
+
+    img {
       width: 81px;
       height: 81px;
       object-fit: contain;
+      margin-bottom: 25px;
+      @media (max-width: 640px) {
+        margin-bottom: 0;
+      }
     }
-    h4{
+
+    h4 {
       font-size: 50px;
       font-weight: 500;
       line-height: 56px;
       color: #295BB8;
       word-spacing: 1000px;
+      @media (max-width: 640px) {
+        font-size: 30px;
+        font-weight: 500;
+        line-height: 34px;
+      }
     }
   }
-  .products-info-grid-right{
+
+  .products-info-grid-right {
     max-height: 320px;
     overflow: auto;
+    font-size: 26px;
+    font-weight: 400;
+    line-height: 38px;
+  }
+
+  .image {
+    border-radius: 10px;
+    overflow: hidden;
+
+    img {
+      height: auto;
+      @media (max-width: 1200px) {
+        width: 100%;
+      }
+    }
+  }
+
+  .swiper-button-prev {
+    left: 0;
+    border-radius: 0 6px 6px 0;
+  }
+
+  .swiper {
+    border-radius: 10px;
+  }
+
+  .swiper-button-next {
+    right: 0;
+    border-radius: 6px 0 0 6px;
+  }
+
+  .swiper-button-prev, .swiper-button-next {
+    top: 50%;
+    transform: translateY(-50%);
+  }
+}
+
+.cooperation-page {
+  padding: 100px 0;
+
+  .image {
+    border-radius: 10px 10px 0 0;
+    overflow: hidden;
+
+    img {
+      height: auto;
+    }
+  }
+
+  .cooperation-page-grid {
+    display: grid;
+    grid-gap: 86px;
+    margin: 40px 0 110px 0;
+    grid-template-columns: repeat(2, 1fr);
+    font-size: 26px;
+    font-weight: 400;
+    line-height: 38px;
+    @media (max-width: 1532px) {
+      font-size: 22px;
+      line-height: 34px;
+    }
+    @media (max-width: 960px) {
+      grid-template-columns: 1fr;
+      grid-gap: 20px;
+    }
+
+  }
+
+  .cooperation-page-info {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 30px;
+    @media (max-width: 960px) {
+      grid-template-columns: 1fr;
+    }
+
+    .title {
+      font-size: 30px;
+      font-weight: 600;
+      line-height: 38px;
+      margin-bottom: 10px;
+
+      &.red {
+        color: #BA2828;
+      }
+
+      &.blue {
+        color: #295BB8;
+      }
+
+    }
+
+    .desc {
+      font-size: 20px;
+      font-weight: 400;
+      line-height: 30px;
+      color: #000000;
+    }
+  }
+
+  .cooperation-page-info-card {
+    background-color: #F7F8FB;
+    border-radius: 10px;
+  }
+
+  .cooperation-page-info-card-wrapper {
+    padding: 40px 38px;
+    @media (max-width: 1532px) {
+      padding: 20px 14px;
+    }
+  }
+
+  .cooperation-page-info-contact {
+    padding: 20px 38px;
+    border-top: 1px solid #D3D9E6;
+    display: flex;
+    align-items: center;
+    gap: 40px;
+    flex-wrap: wrap;
+    @media (max-width: 1532px) {
+      padding: 20px 14px;
+      gap: 24px;
+    }
+
+    &.red {
+      a {
+        background-image: url(../img/svg/phone-circle-red.svg);
+      }
+    }
+
+    &.blue {
+      a {
+        background-image: url(../img/svg/phone-circle-blue.svg);
+      }
+    }
+
+    a {
+      background-repeat: no-repeat;
+      background-position: left center;
+      background-size: 34px;
+      padding-left: 40px;
+      line-height: 36px;
+      font-size: 20px;
+      font-weight: 500;
+      color: #000000;
+      text-decoration: none;
+      @media (max-width: 1532px) {
+        font-size: 18px;
+      }
+    }
+  }
+}
+
+.partners {
+  margin-bottom: 110px;
+
+  .section-title {
+    margin-bottom: 16px;
+  }
+
+  .desc {
+    font-size: 22px;
+    font-weight: 400;
+    line-height: 30px;
+    color: #000;
+    text-align: center;
+    margin-bottom: 40px;
+  }
+
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 30px;
+    @media (max-width: 1200px) {
+      grid-template-columns: repeat(3, 1fr);
+    }
+    @media (max-width: 960px) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+    @media (max-width: 400px) {
+      grid-template-columns: 1fr;
+    }
+
+  }
+
+  .item {
+    background-color: #F7F8FB;
+    border-radius: 10px;
+    height: 195px;
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    img {
+      width: 250px;
+      height: 100%;
+      object-fit: contain;
+    }
+  }
+}
+
+.form-block {
+  padding: 120px 0 80px 0;
+  background-color: #F7F8FB;
+  background-image: url(../img/svg/arnament-left.svg), url(../img/svg/arnament-right.svg);
+  background-position: left center, right center;
+  background-repeat: no-repeat, no-repeat;
+  background-size: 283px;
+
+  .section-title {
+    margin-bottom: 16px;
+  }
+
+  .desc {
+    font-size: 22px;
+    font-weight: 400;
+    line-height: 30px;
+    color: #000;
+    margin-bottom: 60px;
+    text-align: center;
+  }
+
+  .form {
+    background-color: #fff;
+    border-radius: 10px;
+    padding: 40px;
+    max-width: 775px;
+    margin: 0 auto;
+    @media (max-width: 640px) {
+      padding: 20px;
+    }
+  }
+
+  .form-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 20px;
+    @media (max-width: 640px) {
+      grid-template-columns: 1fr;
+      grid-gap: 0;
+    }
+  }
+
+  .label {
+    display: block;
+    width: 100%;
+    margin-bottom: 20px;
+
+    input, textarea {
+      border: 1px solid #D3D9E6;
+      background-color: #F7F8FB;
+      font-size: 20px;
+      font-weight: 400;
+      line-height: 30px;
+      width: 100%;
+      display: block;
+      border-radius: 10px;
+    }
+
+    input {
+      height: 62px;
+      padding: 0 16px;
+    }
+
+    textarea {
+      padding: 16px;
+      max-width: 100%;
+    }
+  }
+
+  .label-checkbox {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    display: flex;
+    align-items: flex-start;
+    flex-direction: row;
+    gap: 8px;
+    cursor: pointer;
+
+    span {
+      color: #295BB8;
+    }
+
+    input {
+      width: 20px;
+      height: 20px;
+      display: block;
+      min-width: 20px;
+      margin-top: 4px;
+
+    }
+  }
+
+  .form-flex {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    margin-top: 40px;
+    gap: 20px;
+  }
+
+  .label-file {
+    position: relative;
+    border: 1px solid #D3D9E6;
+    padding: 10px 14px 10px 47px;
+    display: inline-flex;
+    background-image: url(../img/svg/file.svg);
+    background-repeat: no-repeat;
+    background-position: left 14px center;
+    border-radius: 10px;
+    cursor: pointer;
+    max-width: 200px;
+    overflow: hidden;
+
+    input {
+      width: 0;
+      height: 0;
+      position: absolute;
+      opacity: 0;
+    }
+  }
+
+  .button {
+    outline: none;
+    border: 0;
+    padding: 0 76px;
+    cursor: pointer;
+    @media (max-width: 640px) {
+      width: 100%;
+    }
+  }
+}
+
+.contacts-block {
+  padding: 100px 0 120px 0;
+
+  .contacts-block-flex {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    margin-bottom: 40px;
+    flex-wrap: wrap;
+    gap: 20px;
+  }
+
+  .section-title {
+    margin-bottom: 10px;
+    text-align: left;
+  }
+
+  .desc {
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 38px;
+  }
+
+  .social {
+    display: flex;
+    gap: 20px;
+    align-items: center;
+    flex-wrap: wrap;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 30px;
+    @media (max-width: 640px) {
+      span {
+        width: 100%;
+      }
+    }
+  }
+
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 30px;
+    @media (max-width: 1200px) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+    @media (max-width: 640px) {
+      grid-template-columns: 1fr;
+    }
+
+  }
+
+  .item {
+    border-radius: 10px;
+    background-color: #F7F8FB;
+    padding: 30px 20px;
+    background-repeat: no-repeat;
+    background-position: bottom 10px right 20px;
+  }
+
+  .item-title {
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 30px;
+    color: #BA2828;
+    margin-bottom: 14px;
+  }
+
+  ul {
+    font-size: 20px;
+    font-weight: 500;
+    list-style: none;
+    line-height: 30px;
+  }
+}
+
+.grid-logo {
+  padding: 120px 0;
+  border-bottom: 1px solid #D3D9E6;
+
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 30px;
+    @media (max-width: 1200px) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+    @media (max-width: 640px) {
+      grid-template-columns: 1fr;
+    }
+
+  }
+
+  .item {
+    background-color: #F7F8FB;
+    border-radius: 10px;
+    height: 176px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+}
+
+.maps {
+  padding: 30px 0 120px 0;
+
+  .maps-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 30px;
+    @media (max-width: 960px) {
+      grid-template-columns: 1fr;
+    }
+  }
+
+  .item {
+    display: flex;
+    flex-direction: column;
+
+    img {
+      width: 100%;
+    }
+  }
+
+  .title {
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 38.4px;
+    margin-bottom: 10px;
+  }
+
+  .desc {
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 30px;
+    margin-bottom: 30px;
+    padding-left: 34px;
+    background-image: url(../img/svg/map.svg);
+    background-repeat: no-repeat;
+    background-position: left top 6px;
+  }
+
+  .maps-here {
+    margin-top: auto;
   }
 }
