--- a/scss/global.scss
+++ b/scss/global.scss
@@ -1613,9 +1613,8 @@ color: #fff;
 
   .question-block-content {
     padding: 60px 50px 120px 50px;
-    background-color: #fff;
+    background-color: transparent;
     border-radius: 10px;
-    box-shadow: 0 4px 50px 0 #0000000D;
     background-image: url(../img/png/question-big-blue.png);
     background-position: right bottom;
     background-repeat: no-repeat;
@@ -1663,16 +1662,18 @@ color: #fff;
   }
 
   .question-block-content-title {
-    font-size: 30px;
-    font-weight: 500;
+    font-size: 44px;
+    font-weight: 600;
+    line-height: 50px;
     margin-bottom: 20px;
     color: #000000;
     text-align: center;
   }
 
   .question-block-content-subtitle {
-    font-weight: 400;
     font-size: 22px;
+    font-weight: 400;
+    line-height: 32px;
     color: #000000;
     text-align: center;
   }
@@ -2633,5 +2634,34 @@ color: #fff;
     text-align: center;
 color: #295BB8;
     margin-bottom: 40px;
+  }
+}
+@keyframes animatePreloader {
+  0%{
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.2);
+  }
+  100%{
+    transform: scale(1);
+  }
+}
+#preloader{
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  z-index: 1000;
+  background-color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  img {
+    animation-name: animatePreloader;
+    animation-iteration-count: infinite;
+    animation-duration: 1.5s;
+
   }
 }
