--- a/scss/global.scss
+++ b/scss/global.scss
@@ -234,26 +234,28 @@
   .about-us-block-grid-right {
     position: relative;
     z-index: 2;
+    display: flex;
+    justify-content: flex-end;
     @media (max-width: 960px) {
       display: flex;
       justify-content: center;
     }
     .image-1{
       position: absolute;
-      top: 40px !important;
+      top: calc(50% - 100px);
       left: 0;
       z-index: 2;
       width: 200px;
       height: 200px;
       object-fit: contain;
       @media (max-width: 960px) {
-        top: -40px !important;
-        left: calc(50% - 100px) !important;
-        position: absolute !important;
+        top: -40px;
+        left: calc(50% - 100px);
+        position: absolute;
       }
     }
     .image-2{
-      left: inherit !important;
+      left: inherit;
       right: 0;
       max-width: 400px;
       width: 100%;
@@ -1151,21 +1153,28 @@
   .product-block-content-center {
     margin: 0 114px 0 27px;
     flex: 0 0 300px;
+    height: 480px;
     align-self: center;
-    @media (max-width: 1532px) {
-      flex: 0 0 270px;
-      margin: 0 40px 0 27px;
-    }
+    position: relative;
     @media (max-width: 1200px) {
-      flex: 0 0 100%;
-      margin: 0 0 40px 0;
-      img {
-        margin: 0 auto
-      }
+      margin: 0 auto;
     }
-    @media (max-width: 640px) {
-      flex: 0 0 160px;
-      margin: 0 auto 20px auto;
+    .i1{
+      position: absolute;
+      top:0;
+      z-index: 3;
+      left: -45px;
+    }
+    .i2{
+      position: absolute;
+      top:0;
+      z-index: 2;
+      right: 0;
+    }
+    .i3{
+      position: absolute;
+      top: 0;
+      z-index: 1;
     }
   }
 
@@ -1174,7 +1183,7 @@
     box-shadow: 0px 4px 50px 0px #00000026;
     padding: 40px 30px;
     position: relative;
-    flex: 0 0 374px;
+    flex: 0 0 480px;
     border-radius: 0px 10px 10px 0px;
     &.mode{
       border-radius: 0px 10px 10px 0px;
