--- a/scss/global.scss
+++ b/scss/global.scss
@@ -1228,7 +1228,6 @@
       font-size: 20px;
       font-weight: 600;
       line-height: 30px;
-      text-transform: uppercase;
 color: #fff;
       margin-bottom: 40px;
     }
@@ -2616,7 +2615,12 @@ color: #fff;
   }
 
 }
-
+.map{
+  position: relative;
+  width: 100%;
+  height: 260px;
+  overflow: hidden;
+}
 .maps {
   padding: 30px 0 120px 0;
 
@@ -2632,6 +2636,7 @@ color: #fff;
   .item {
     display: flex;
     flex-direction: column;
+    overflow: hidden;
 
     img {
       width: 100%;
