--- a/scss/global.scss
+++ b/scss/global.scss
@@ -11,7 +11,22 @@
     position: relative;
     z-index: 2;
   }
-
+  .swiper-left{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    width: 11%;
+    z-index: 2;
+  }
+  .swiper-right{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    width: 11%;
+    z-index: 2;
+  }
   .swiper-slide {
     background-attachment: fixed;
     background-repeat: no-repeat;
@@ -2670,6 +2685,7 @@ color: #fff;
   .modal-form-flex{
     display: flex;
     flex-direction: column;
+    align-items: center;
   }
   .modal-form-close{
     margin-left: auto;
@@ -2686,6 +2702,9 @@ color: #fff;
     text-align: center;
 color: #295BB8;
     margin-bottom: 40px;
+    &.error-title {
+      color: #BA2828;
+    }
   }
 }
 @keyframes animatePreloader {
